sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:10: error: value update is not a member of Int
        getValueCount() = getValeurCount - 1
        ^AlgBubbleSort2:10: error: not found: value getValeurCount
        getValueCount() = getValeurCount - 1
                          ^