sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
  var swapped=false
  do {
    swapped= false;
    for (i <- 0 to getValueCount()-2)
      if(isSmaller(i+1,i)) {
        swap(i,i+1)
        swapped= true;
        getValueCount() = getValeurCount - 1
      }
  } while(swapped);
}